--- a/Great desuyo/2. 캐릭터를 만들자!/2.1 캐릭터의 컨셉을 정하자!.md
+++ b/Great desuyo/2. 캐릭터를 만들자!/2.1 캐릭터의 컨셉을 정하자!.md
@@ -1,6 +1,6 @@
 유저들은 어떤 캐릭터든 되볼 수 있다. 
  신사도를 추구하는 완벽한 영웅상이 되어서 악으로부터 사람들을 구해낼수도 있고,
  원한다면 평범한 도시에 소시민인척 숨어있는 더러운 연쇄살인마가 되어볼수도 있다. 
-당연한 이치이지만 "화살"로써 중요한것은 유저가 자신이 원하는 그 캐릭터가 어떤 캐릭터인지 확실히 정하고 이입할수있도록 돕는것이다.
+당연하게도 "화살"로써 가장 중요한것은 유저가 자신이 원하는 그 캐릭터가 어떤 캐릭터인지 확실히 정하고 이입할수있도록 돕는것이다.
 	 [**너는 바다의 남자냐? 육지의 남자냐?**]
 	 
