--- a/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
+++ b/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
@@ -1,7 +1,10 @@
 ## STANDPROUD 스탯 체계:
 
-1. **S** - Strength (힘/파워) : 말 그대로 플레이어의 힘을 
-2. **T** - Tenacity (정신력/집념)
+1. **S** - Strength (힘/파워) : 말 그대로 유저의 힘을 보여주는 수치, 거대한 장비를 완벽하게 사용하려면 힘이 필요하지 않을수없다!( 근접공격 데미지, 던지기, 격투기술, 밀치기 기술, 잡기 기술, 문 장애물 파괴 기술, 장비 사용에 영향을 끼친다. )
+
+2. **T** - Tenacity (정신력/집념) : 정신력은 "스탠드" 즉 성스러운 비전을 만드는 힘이다. 정신력이 어떤 방향으로든 "대단"하지 못하면 스탠드는 발현될수가 없을것이다.( 빈사 디버프, 기절 저항, 그리고 각오와 황금의 정신에 영향을 끼친다. )
+		ㄴ정신력이 딱 평균상태인 유저는 체력이 50%이하로 떨어지면 빈사 디버프( 스탯, 재능 저하)가 생기게되고 25%이하면 기절하게된다. 하지만 충분한 정신력을 지닌 유저라면 체력이 10%대로 떨어져도 전투를 이어나갈수있을것이다. 
+		
 3. **A** - Agility (민첩성)
 4. **N** - Nerve (인지력/감각)
 5. **D** - Destiny (운/행운)
