--- a/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
+++ b/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
@@ -1,15 +1,17 @@
-## STANDPROUD 스탯 체계:
+	## STANDPROUD 스탯 체계:
 
 1. **S** - Strength (힘/파워) : 말 그대로 유저의 힘을 보여주는 수치, 거대한 장비를 완벽하게 사용하려면 힘이 필요하지 않을수없다!( 근접공격 데미지, 던지기, 격투기술, 밀치기 기술, 잡기 기술, 문 장애물 파괴 기술, 장비 사용에 영향을 끼친다. )
 
 2. **T** - Tenacity (정신력/집념) : 정신력은 "스탠드" 즉 성스러운 비전을 만드는 힘이다. 정신력이 어떤 방향으로든 "대단"하지 못하면 스탠드는 발현될수가 없을것이다.( 빈사 디버프, 기절 저항, 그리고 각오와 황금의 정신에 영향을 끼친다. )
 		ㄴ정신력이 딱 평균상태인 유저는 체력이 50%이하로 떨어지면 빈사 디버프( 스탯, 재능 저하)가 생기게되고 25%이하면 기절하게된다. 하지만 충분한 정신력을 지닌 유저라면 체력이 10%대로 떨어져도 전투를 이어나갈수있을것이다. 
 		
-3. **A** - Agility (민첩성) : "감각의 눈으로 잘 봐라! 갑주를 벗은 실버 채리엇!" 스피드가 부족한 폴나레프는 상상조차 할수 없다. 
-4. **N** - Nerve (인지력/감각)
-5. **D** - Destiny (운/행운)
-6. **P** - Perseverance (회복력/인내)
-7. **R** - Relations (매력/카리스마)
-8. **O** - Outlook (지력/판단력)
-9. **U** - Urgency (반응속도/순발력)
-10. **D** - Durability (유지력/내구)
+3. **A** - Agility (민첩성) : "감각의 눈으로 잘 봐라! 갑주를 벗은 실버 채리엇!" 스피드가 부족한 폴나레프는 상상조차 할수 없다. 스피드가 부족한 죠셉또한 상상조차 할수없다. ( 전투시 AP 최대치 ,회피판정, 곡예, 은신, 소매치기에 영향을 끼친다. )
+4. **N** - Nerve (인지력/감각) : 수많은 스탠드술사들의 공격들 사이에서 살아남으려면 뛰어난 감각과 인지력은 선택이 아니라 필수일것이다. 어쩌면 정말 뛰어난 감각을 가진 유저는 감각만으로 스탠드술사의 추적을 찾아낼수있을지도 모른다. ( 사정거리, 숨은 적 탐지, 위험 예감, 거짓말 간파, 단서 발견, 함정 탐지에 영향을 끼친다. )
+5. **D** - Destiny (운/행운)  : 운은 별거없는 능력이라고 여길수도 있지만, 운만으로 스틸 볼 런 레이스를 이긴 행운의 사나이도  있는것처럼, 운명의 돌림판이 당신의 편이라는것은 매우 큰 도움이 될것이다!( 중요한 순간에 운판정 가능, 무작위 사건 발생 시, 생사를 가르는 우연, 각종 이벤트, 도박, 각종 경주형 도박에 영향, 적, 아군의 총기 고장률에 영향을 끼친다. )
+6. **P** - Perseverance (회복력/인내) : 꺠끗한 커튼만으로 사망자가 2명이 나온 전투의 부상을 모두 회복한 폴나레프처럼 회복력이 뛰어나다면 전투불가상태를 빠르게 이겨낼 수 있을것이다. ( 각종 디버프성 약물, 스탠드 공격 회복, 기절 회복, 출혈 회복, 각오 포인트 발동시 -체력 상태에서 회복판정에 영향을 준다. ) 
+7. **R** - Relations (매력/카리스마) : 때로는 전투적인 스탠드 배틀이 아닌 거래와 설득을 통해서 문제를 해결해야할때도 있다. 만약 충분한 매력이 없다면 설득에 도움이 되기는 커녕 악영향을 끼칠지도 모른다. ( 설득, 첫인상 보너스, 정보 캐내기, 리더십, 거래에 영향을 끼친다. )
+8. **O** - Outlook (지력/판단력) : "이다음 니가 할 말은 "충분한 지력과 판단력은 상대방의 다음 행동마저 예측하게 해줄지도 모른다." 이다!" 충분한 지력과 판단력은 상대방의 다음 행동마저 예측하게 해줄지도 모른다. ( 수수께기 해결시 힌트, 각종 조사 이벤트시 정보 추가, 창의적 스탠드 응용 판정에 영향을 끼친다. ) 
+	1. ㄴ 창의적 스탠드 응용은 때로는 전투를 승리로 이끌 큰 이벤트가 될수도 있지만 만약 지력, 운명 등등의 조건이 맞지않는다면 오히려 아군에게 큰 타격을 줄수도 있다. ( 유저가 창의적인 스탠드 응용을 제시하면, 그 응용의 난이도에 따라서 굴림을 해 성공판정, 실패판정을 해주자.)
+9. **U** - Urgency (반응속도/순발력) : 정말 빠르고 강력한 반응속도를 지녔다면 유저는 스스로 발사한 총알마저 막아낼수있을지도 모른다. ( 전투 선공권 결정, 갑작스런 위협 대응, 회피판정에 영향을 끼친다.)
+10. **D** - Durability (유지력/내구) : 강인한 두뇌엔 강인한 정신이 깃든다! 통나무같이 단단한 고간과 다리가 있다면 어떤 여행이라도 견뎌낼수있다! (HP 최대치 계산, 디버프 저항, 데미지 감소에 영향을 끼친다.)
+
