--- a/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
+++ b/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
@@ -6,7 +6,7 @@
 		ㄴ정신력이 딱 평균상태인 유저는 체력이 50%이하로 떨어지면 빈사 디버프( 스탯, 재능 저하)가 생기게되고 25%이하면 기절하게된다. 하지만 충분한 정신력을 지닌 유저라면 체력이 10%대로 떨어져도 전투를 이어나갈수있을것이다. 
 		
 3. **A** - Agility (민첩성) : "감각의 눈으로 잘 봐라! 갑주를 벗은 실버 채리엇!" 스피드가 부족한 폴나레프는 상상조차 할수 없다. 스피드가 부족한 죠셉또한 상상조차 할수없다. ( 전투시 AP 최대치 ,회피판정, 곡예, 은신, 소매치기에 영향을 끼친다. )
-4. **N** - Nerve (인지력/감각) : 수많은 스탠드술사들의 공격들 사이에서 살아남으려면 뛰어난 감각과 인지력은 선택이 아니라 필수일것이다. 어쩌면 정말 뛰어난 감각을 가진 유저는 감각만으로 스탠드술사의 추적을 찾아낼수있을지도 모른다. ( 사정거리, 숨은 적 탐지, 위험 예감, 거짓말 간파, 단서 발견, 함정 탐지에 영향을 끼친다. )
+4. **N** - Nerve (인지력/감각) : 수많은 스탠드술사들의 공격들 사이에서 살아남으려면 뛰어난 감각과 인지력은 선택이 아니라 필수일것이다. 어쩌면 정말 뛰어난 감각을 가진 유저는 감각만으로 스탠드술사의 추적을 찾아낼수있을지도 모른다. ( 본체 사정거리, 숨은 적 탐지, 위험 예감, 거짓말 간파, 단서 발견, 함정 탐지에 영향을 끼친다. )
 5. **D** - Destiny (운/행운)  : 운은 별거없는 능력이라고 여길수도 있지만, 운만으로 스틸 볼 런 레이스를 이긴 행운의 사나이도  있는것처럼, 운명의 돌림판이 당신의 편이라는것은 매우 큰 도움이 될것이다!( 중요한 순간에 운판정 가능, 무작위 사건 발생 시, 생사를 가르는 우연, 각종 이벤트, 도박, 각종 경주형 도박에 영향, 적, 아군의 총기 고장률에 영향을 끼친다. )
 6. **P** - Perseverance (회복력/인내) : 꺠끗한 커튼만으로 사망자가 2명이 나온 전투의 부상을 모두 회복한 폴나레프처럼 회복력이 뛰어나다면 전투불가상태를 빠르게 이겨낼 수 있을것이다. ( 각종 디버프성 약물, 스탠드 공격 회복, 기절 회복, 출혈 회복, 각오 포인트 발동시 -체력 상태에서 회복판정에 영향을 준다. ) 
 7. **R** - Relations (매력/카리스마) : 때로는 전투적인 스탠드 배틀이 아닌 거래와 설득을 통해서 문제를 해결해야할때도 있다. 만약 충분한 매력이 없다면 설득에 도움이 되기는 커녕 악영향을 끼칠지도 모른다. ( 설득, 첫인상 보너스, 정보 캐내기, 리더십, 거래에 영향을 끼친다. )
