--- a/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
+++ b/Great desuyo/2. 캐릭터를 만들자!/2.4. 본체 재능.md
@@ -12,6 +12,6 @@
 7. **R** - Relations (매력/카리스마) : 때로는 전투적인 스탠드 배틀이 아닌 거래와 설득을 통해서 문제를 해결해야할때도 있다. 만약 충분한 매력이 없다면 설득에 도움이 되기는 커녕 악영향을 끼칠지도 모른다. ( 설득, 첫인상 보너스, 정보 캐내기, 리더십, 거래에 영향을 끼친다. )
 8. **O** - Outlook (지력/판단력) : "이다음 니가 할 말은 "충분한 지력과 판단력은 상대방의 다음 행동마저 예측하게 해줄지도 모른다." 이다!" 충분한 지력과 판단력은 상대방의 다음 행동마저 예측하게 해줄지도 모른다. ( 수수께기 해결시 힌트, 각종 조사 이벤트시 정보 추가, 창의적 스탠드 응용 판정에 영향을 끼친다. ) 
 	1. ㄴ 창의적 스탠드 응용은 때로는 전투를 승리로 이끌 큰 이벤트가 될수도 있지만 만약 지력, 운명 등등의 조건이 맞지않는다면 오히려 아군에게 큰 타격을 줄수도 있다. ( 유저가 창의적인 스탠드 응용을 제시하면, 그 응용의 난이도에 따라서 굴림을 해 성공판정, 실패판정을 해주자.)
-9. **U** - Urgency (반응속도/순발력) : 정말 빠르고 강력한 반응속도를 지녔다면 유저는 스스로 발사한 총알마저 막아낼수있을지도 모른다. ( 전투 선공권 결정, 갑작스런 위협 대응, 회피판정에 영향을 끼친다.)
+9. **U** - Unleashed (폭발력/각성) : ( 전투 선공권 결정, 갑작스런 위협 대응, 회피판정에 영향을 끼친다.)
 10. **D** - Durability (유지력/내구) : 강인한 두뇌엔 강인한 정신이 깃든다! 통나무같이 단단한 고간과 다리가 있다면 어떤 여행이라도 견뎌낼수있다! (HP 최대치 계산, 디버프 저항, 데미지 감소에 영향을 끼친다.)
 
